<resources>
    <string name="app_name">Odoo RPC</string>
    <string name="ok">Okay</string>
    <string name="cancel">Cancel</string>
    <string name="fatal_error">Fatal Error</string>
    <string name="generic_error">Something went wrong!</string>
    <string name="exit">Exit</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="action_dashboard">Dashboard</string>
    <string name="action_profile">Profile</string>
    <string name="action_add_account">Add account</string>
    <string name="action_manage_account">Manage Accounts</string>
    <string name="action_login_other_account">Login with Other Accounts</string>
    <string name="manage_account_remove_error">Failed to remove account</string>
    <string name="profile_full_name">Name:- N/A</string>
    <string name="profile_email">Email:- N/A</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="navigation_exit">Press again to exit</string>
    <string name="login_protocol">Protocol</string>
    <string name="login_host_hint">Host (e.g. 192.168.0.1:8069)</string>
    <string name="login_host_error">Please, type host URL</string>
    <string name="login_check_odoo_version">Check Server Compatibility</string>
    <string name="login_checking_odoo_version">Checking Server Compatibility&#8230;</string>
    <string name="login_server_success">Odoo version %s is compatible</string>
    <string name="login_server_error">Odoo version %s is incompatible</string>
    <string name="login_username_hint">Username (e.g. user@odoo.com)</string>
    <string name="login_username_error">Please, Type username</string>
    <string name="login_password_hint">Password</string>
    <string name="login_password_error">Please, Type password</string>
    <string name="login_database_hint">Database</string>
    <string name="login_database_error">Please, Select database</string>
    <string name="login_submit">Login</string>
    <string name="login_progress">Authenticating&#8230;</string>
    <string name="login_success">Creating user account&#8230;</string>
    <string name="login_create_account_error">Something went wrong creating user account</string>
    <string name="error_active_user">There is no active user found!</string>
    <string name="profile_name">Name</string>
    <string name="profile_login">Login</string>
    <string name="profile_server_url">Server URL</string>
    <string name="profile_database">Database</string>
    <string name="profile_odoo_version">Odoo Version</string>
    <string name="profile_timezone">Timezone</string>
    <string name="preference_build_category">Version Info</string>
    <string name="preference_build_key">build</string>
    <string name="preference_build_title">Build Version</string>
    <string name="preference_build_summary">Version %s</string>
    <string name="preference_about_category">About</string>
    <string name="preference_organization_key">organization</string>
    <string name="preference_organization_title">Developed By</string>
    <string name="preference_privacy_policy_key">privacy</string>
    <string name="preference_privacy_policy_title">Privacy Policy</string>
    <string name="preference_contact_key">contact</string>
    <string name="preference_contact_title">Contact Us</string>
    <string name="preference_prompt_email_intent">Send email using</string>
    <string name="preference_error_email_intent">There\'s no application found to open email links</string>
    <string name="recycler_empty_title">Your records appear here</string>
    <string name="recycler_error_retry">Retry</string>
</resources>
